<resources>
    <string name="app_name">I2P</string>
    <string name="desc_i2p_logo">I2P logo</string>
    <string name="choose_language">Choose language</string>
    <string name="welcome_new_install">Welcome to I2P! This app is ALPHA software and it does not provide strong anonymity. Please read the release notes and license information.</string>
    <string name="welcome_new_version">New version installed. Please read the release notes. Version:</string>
    <string name="label_tunnels">Tunnels</string>
    <string name="label_status">Status</string>
    <string name="label_console">Console</string>
    <string name="label_addresses">Addresses</string>
    <string name="label_addressbook">Addressbook</string>
    <string name="label_i2ptunnel" translatable="false">@string/label_tunnels</string>
    <string name="label_i2ptunnel_client">Client tunnels</string>
    <string name="label_i2ptunnel_server">Server tunnels</string>
    <string name="label_logs">Logs</string>
    <string name="label_error_logs">Error Logs</string>
    <string name="label_news">News</string>
    <string name="label_peers_status">Peers</string>
    <string name="label_release_notes">Release Notes</string>
    <string name="label_licenses">Licenses</string>
    <string name="label_browse">Browse</string>
    <string name="label_graphs">Graphs</string>
    <string name="button_router_off">Long press to start I2P</string>
    <string name="button_router_on">I2P is running (long press to stop)</string>
    <string name="button_router_graceful">I2P will shut down in %s</string>
    <string name="button_shutdown_now">Long press to stop now</string>
    <string name="button_cancel_graceful">Long press to cancel shutdown</string>
    <string name="no_internet">No Internet connection is available</string>
    <string name="net_status_ipv4_ipv6" translatable="false">IPv4: %1$s; IPv6: %2$s</string>
    <string name="hidden">Hidden</string>
    <string name="testing">Testing</string>
    <string name="firewalled">Firewalled</string>
    <string name="symmetric_nat">Symmetric NAT</string>
    <string name="vm_comm_system" translatable="false">VM Comm System</string>
    <string name="net_status_error_i2cp">Client manager I2CP error - check logs</string>
    <string name="net_status_error_skew">Clock skew of %s</string>
    <string name="net_status_error_unresolved_tcp">Unresolved TCP address</string>
    <string name="net_status_error_private_tcp">Private TCP address</string>
    <string name="net_status_warn_firewalled_inbound_tcp">Firewalled with inbound TCP enabled</string>
    <string name="net_status_warn_firewalled_floodfill">Firewalled and floodfill</string>
    <string name="net_status_info_disconnected">Disconnected - check network connection</string>
    <string name="net_status_error_udp_port">UDP port in use - change in settings and restart</string>
    <string name="net_status_error_no_active_peers">No active peers - check network connection and firewall</string>
    <string name="net_status_error_udp_disabled_tcp_not_set">UDP disabled and inbound TCP host/port not set</string>
    <string name="net_status_warn_firewalled_udp_disabled">Firewalled with UDP disabled</string>
    <string name="shared_clients">Shared clients</string>
    <string name="uptime">Uptime</string>
    <string name="active_peers">Active peers</string>
    <string name="known_peers">Known peers</string>
    <string name="char_client_tunnel">C</string>
    <string name="char_server_tunnel">S</string>
    <string name="no_tunnels_running">No tunnels are running yet.</string>
    <string name="download">Download</string>
    <string name="upload">Upload</string>
    <string name="configure_browser_title">Configure browser?</string>
    <string name="configure_browser_for_i2p">Would you like to configure a browser to view I2P sites? (You can also do this later from the help menu.)</string>
    <string name="configure_no_doze_title">Manage Battery Optimizations?</string>
    <string name="configure_no_doze">I2P works best if it keeps running. To prevent Android from closing I2P when trying to save power, you can add it to the battery exceptions list. This will substantially improve the reliability of the application.\n\nKeep I2P running in the background? (recommended)</string>
    <string name="first_start_title">Congratulations on getting I2P installed!</string>
    <string name="first_start_welcome"><b>Welcome to I2P!</b> Please <b>have patience</b> as I2P boots up and finds peers.</string>
    <string name="first_start_read">While you are waiting, please read the release notes and welcome page.</string>
    <string name="first_start_faq">Once you have client tunnels, please <b>check out</b> our FAQ:</string>
    <string name="url_faq" translatable="false">http://i2p-projekt.i2p/en/faq</string>
    <string name="first_start_faq_nonanon">Or use this non-anonymous link if you don\'t want to wait for tunnels:</string>
    <string name="url_faq_nonanon" translatable="false">https://geti2p.net/en/faq</string>
    <string name="first_start_irc">Point your IRC client to <b>localhost:6668</b> and say hi to us on:</string>
    <string name="url_irc_i2p" translatable="false">irc://127.0.0.1:6668/i2p | irc://127.0.0.1:6668/i2p-dev</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="action_i2ptunnel_start">Start tunnel</string>
    <string name="action_i2ptunnel_stop">Stop tunnel</string>
    <string name="action_i2ptunnel_start_all">Start all tunnels</string>
    <string name="action_i2ptunnel_stop_all">Stop all tunnels</string>
    <string name="action_i2ptunnel_restart_all">Restart all tunnels</string>
    <string name="action_reload">Reload</string>
    <string name="action_refresh">Refresh</string>
    <string name="hint_search_addressbook">Search addressbook</string>
    <string name="action_reload_subscriptions">Reload subscriptions</string>
    <string name="news_last_updated">News last updated %s ago</string>
    <string name="news_last_checked">News last checked %s ago</string>
    <string name="news_updated">News Updated</string>
    <string name="view_news">Touch to view latest I2P news</string>
    <string name="router_not_running">The router is not running.</string>
    <string name="router_shutting_down">The router is shutting down.</string>
    <string name="stats_not_ready">The statistics manager is not ready yet. Try again later.</string>
    <string name="select_an_address">Select an address.</string>
    <string name="no_graphs_configured">No graphs have been configured. You can choose statistics to graph in the settings menu. Any changes will take effect after 60 seconds.</string>
    <string name="configure_graphs">Configure graphs</string>
    <string name="graphs_not_ready">Graphs are not ready yet. Try again later.</string>
    <string name="statistics">Statistics</string>
    <string name="routers">Routers</string>
    <string name="leasesets">LeaseSets</string>
    <string name="countries">Countries</string>
    <string name="country">Country</string>
    <string name="transport">Transport</string>
    <string name="versions">Versions</string>
    <string name="version">Version</string>
    <string name="count">Count</string>
    <string name="tname_0">Hidden or starting up</string>
    <string name="tname_1" translatable="false">SSU</string>
    <string name="tname_2" translatable="false">SSU with introducers</string>
    <string name="tname_4" translatable="false">NTCP</string>
    <string name="tname_5" translatable="false">NTCP and SSU</string>
    <string name="tname_6" translatable="false">NTCP and SSU with introducers</string>
    <string name="tname_9" translatable="false">IPv6 SSU</string>
    <string name="tname_10" translatable="false">IPv6 Only SSU, introducers</string>
    <string name="tname_11" translatable="false">IPv6 SSU, introducers</string>
    <string name="tname_12" translatable="false">IPv6 NTCP</string>
    <string name="tname_13" translatable="false">IPv6 NTCP, SSU</string>
    <string name="tname_14" translatable="false">IPv6 Only NTCP, SSU, introducers</string>
    <string name="tname_15" translatable="false">IPv6 NTCP, SSU, introducers</string>
    <string name="netdb_routers_empty">No routers in your NetDB.</string>
    <string name="netdb_leases_empty">No LeaseSets in your NetDB.</string>
    <string name="notification_status_starting">I2P is starting up</string>
    <string name="notification_status_restarting">I2P is restarting</string>
    <string name="notification_status_waiting">I2P is waiting for a network connection</string>
    <string name="notification_status_starting_after_waiting">Network connected, I2P is starting up</string>
    <string name="notification_status_running">I2P is running</string>
    <string name="notification_status_client_ready">Client tunnels are ready</string>
    <string name="notification_status_client_down">Client tunnels are down</string>
    <string name="notification_status_graceful">Stopping I2P in %s</string>
    <string name="notification_status_stopping">Stopping I2P</string>
    <string name="notification_status_stopping_after_net">Network disconnected, stopping I2P</string>
    <string name="notification_status_shutdown_cancelled">Shutdown cancelled</string>
    <string name="notification_status_shutting_down">I2P is shutting down</string>
    <string name="notification_status_text" translatable="false">%1$sBps ↓ / %2$sBps ↑</string>
    <string name="notification_status_bw">Bandwidth: %1$sBps down / %2$sBps up</string>
    <string name="notification_status_peers">Peers: %1$d active, %2$d known</string>
    <string name="settings_label_bandwidth_net">Bandwidth and network</string>
    <string name="settings_label_startOnBoot">Start I2P on Boot</string>
    <string name="settings_desc_startOnBoot">Automatically connect to I2P when your Android device starts up</string>
    <string name="settings_label_bandwidth">Bandwidth</string>
    <string name="settings_desc_bw_inbound">Maximum inbound speed</string>
    <string name="settings_desc_bw_outbound">Maximum outbound speed</string>
    <string name="settings_label_network">Network</string>
    <string name="settings_desc_upnp">Open firewall ports automatically</string>
    <string name="settings_label_logging">Logging</string>
    <string name="settings_label_appearance">Appearance</string>
    <string name="settings_label_advanced">Advanced</string>
    <string name="settings_label_showStats">Router statistics</string>
    <string name="settings_summ_showStats">Display advanced stats in main console</string>
    <string name="settings_label_transports">Transports</string>
    <string name="settings_label_exploratory_pool">Exploratory pool</string>
    <string name="settings_desc_exploratory_pool">Tunnel parameters</string>
    <string name="about_version">Version:</string>
    <string name="about_project">Project Home:</string>
    <string name="url_project" translatable="false">https://geti2p.net | http://i2p-projekt.i2p</string>
    <string name="about_bugs">Bugs and Support:</string>
    <string name="url_android_forum" translatable="false">http://zzz.i2p/forums/17</string>
    <string name="about_helpwanted">Help Wanted!</string>
    <string name="about_volunteer">Want to help make the app better? Volunteer on the Android forum:</string>
    <string name="about_gitlab">Want to suggest a feature or fix a bug? make a Merge Request on the Android Gitlab:</string>
    <string name="url_gitlab" translatable="false">https://i2pgit.org/i2p-hackers/i2p.android.base | http://git.idk.i2p/i2p-hackers/i2p.android.base</string>
    <string name="i2ptunnel_view_target">Target</string>
    <string name="i2ptunnel_view_access_point">Access point</string>
    <string name="i2ptunnel_view_autostart">Auto-start</string>
</resources>