<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_start_welcome" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_start_read" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_start_faq" />

        <TextView
            android:id="@+id/url_faq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/url_faq" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_start_faq_nonanon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/url_faq_nonanon"
            android:autoLink="web" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/first_start_irc" />

        <TextView
            android:id="@+id/url_irc_i2p"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/url_irc_i2p" />

    </LinearLayout>
    

</ScrollView>
