<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_graphs"
        android:title="@string/label_graphs"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_peers"
        android:title="@string/label_peers_status"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_netdb"
        android:title="NetDB"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_news"
        android:title="@string/label_news"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logs"
        android:title="@string/label_logs"
        app:showAsAction="always" />
</menu>