<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--
    Keys and the default values from current installation:
    -->
    <CheckBoxPreference
        android:key="i2pandroid.startOnBoot"
        android:defaultValue="false"
        android:title="@string/settings_label_startOnBoot"
        android:summary="@string/settings_desc_startOnBoot"
        />

    <PreferenceCategory
        android:key="settings_bandwidth"
        android:title="@string/settings_label_bandwidth">
    <!--
    i2np.bandwidth.inboundKBytesPerSecond=100
    -->
    <com.pavelsikun.seekbarpreference.SeekBarPreference
        android:key="@string/PROP_INBOUND_BANDWIDTH"
        android:title="@string/settings_desc_bw_inbound"
        app:msbp_defaultValue="100"
        app:msbp_maxValue="1000"
        app:msbp_measurementUnit="KB/s"
        />
    <!--
    i2np.bandwidth.outboundKBytesPerSecond=30
    -->
    <com.pavelsikun.seekbarpreference.SeekBarPreference
        android:key="@string/PROP_OUTBOUND_BANDWIDTH"
        android:title="@string/settings_desc_bw_outbound"
        app:msbp_defaultValue="100"
        app:msbp_maxValue="1000"
        app:msbp_measurementUnit="KB/s"
        />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="settings_network"
        android:title="@string/settings_label_network">
        <!--
        Temporarily hidden because of problems with changing defaults.
        We don't want to cause network instability because we have thousands of
        new unstable routers churning the network, and can't change their
        default settings.
    <CheckBoxPreference
        android:key="router.hiddenMode"
        android:defaultValue="true"
        android:title="@string/settings_label_hiddenMode"
        android:summary="@string/settings_desc_hiddenMode"
        />
        -->
    <!--
    router.maxParticipatingTunnels=0
    -->
        <!--
    <com.hlidskialf.android.preference.SeekBarPreference
        android:key="router.maxParticipatingTunnels"
        android:defaultValue="20"
        android:max="500"
        android:title="@string/settings_label_maxPartTunnels"
        android:summary="@string/settings_desc_maxPartTunnels"
        android:dialogMessage="Maximum tunnels to participate in"
        android:text=" Tunnels"
        android:dependency="router.hiddenMode"
        />
        -->
    <!--
    router.sharePercentage=10
    -->
        <!--
    <com.hlidskialf.android.preference.SeekBarPreference
        android:key="router.sharePercentage"
        android:defaultValue="80"
        android:max="100"
        android:title="@string/settings_label_sharePercent"
        android:summary="@string/settings_desc_sharePercent"
        android:dialogMessage="Percentage of bandwidth to share"
        android:text="%"
        android:dependency="router.hiddenMode"
        android:shouldDisableView="true"
        />
        -->

    <!--
    i2np.upnp.enable=false
    -->
    <CheckBoxPreference
        android:key="@string/PROP_ENABLE_UPNP"
        android:defaultValue="true"
        android:title="UPnP"
        android:summary="@string/settings_desc_upnp"
        />
    </PreferenceCategory>

</PreferenceScreen>
