<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/main_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="@dimen/activity_horizontal_margin_no_padding"
        android:paddingLeft="@dimen/activity_horizontal_margin_no_padding"
        android:paddingRight="@dimen/activity_horizontal_margin_no_padding"
        android:paddingStart="@dimen/activity_horizontal_margin_no_padding" />

    <net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/console_action_menu"
        style="@style/ConsoleMenu"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp">

        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_netdb"
            style="@style/ConsoleMenu.Button.Mini"
            app:fab_icon="@drawable/ic_cloud_white_24dp"
            app:fab_title="NetDB" />

        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_peers"
            style="@style/ConsoleMenu.Button.Mini"
            app:fab_icon="@drawable/ic_wifi_tethering_white_24dp"
            app:fab_title="@string/label_peers_status" />

        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_graphs"
            style="@style/ConsoleMenu.Button.Mini"
            app:fab_icon="@drawable/ic_insert_chart_white_24dp"
            app:fab_title="@string/label_graphs" />

        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_logs"
            style="@style/ConsoleMenu.Button.Mini"
            app:fab_icon="@drawable/ic_bug_report_white_24dp"
            app:fab_title="@string/label_logs" />

        <net.i2p.android.ext.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_news"
            style="@style/ConsoleMenu.Button.Mini"
            app:fab_icon="@drawable/ic_info_white_24dp"
            app:fab_title="@string/label_news" />
    </net.i2p.android.ext.floatingactionbutton.FloatingActionsMenu>
</RelativeLayout>