<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height_with_text"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tunnel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tunnel name"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:id="@+id/tunnel_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tunnel description"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/tunnel_type"
        style="@style/ListItem.TextOnly"
        android:text="Tunnel type" />

    <TextView
        android:id="@+id/tunnel_details"
        style="@style/ListItem.TextOnly"
        android:text="Tunnel details" />

    <LinearLayout
        android:id="@+id/tunnel_target_interface_port_item"
        style="@style/ListItem.TwoLines">

        <TextView
            android:id="@+id/tunnel_target_interface_port"
            style="@style/ListItemContent.Text.Main.TwoLines"
            android:text="Interface:port" />

        <TextView
            style="@style/ListItemContent.Text.Second.TwoLines"
            android:text="@string/i2ptunnel_view_target" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tunnel_access_interface_port_item"
        style="@style/ListItem.TwoLines">

        <TextView
            android:id="@+id/tunnel_access_interface_port"
            style="@style/ListItemContent.Text.Main.TwoLines"
            android:text="Interface:port" />

        <TextView
            style="@style/ListItemContent.Text.Second.TwoLines"
            android:text="@string/i2ptunnel_view_access_point" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/tunnel_autostart"
        style="@style/ListItem.TextOnly"
        android:clickable="false"
        android:text="@string/i2ptunnel_view_autostart" />

</LinearLayout>
